--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 {
    
     font-style: italic;
-    background-image: url("images/img11.png ");
+    background-image: url("img11.png ");
     background-repeat: no-repeat;
     background-size: 100% 100%;
    padding: 6%;
